--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,7 +12,7 @@
         <div class="layui-logo">文档检索系统</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">文档管理</a></li>
+            <li class="layui-nav-item"><a href="pages/retrieve-document.html">文档管理</a></li>
             <li class="layui-nav-item"><a href="">用户管理</a></li>
         </ul>
         <ul class="layui-nav layui-layout-right">
@@ -34,7 +34,7 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree"  lay-filter="test">
 
-                <li class="layui-nav-item"><a href="">检索文档</a></li>
+                <li class="layui-nav-item"><a href="pages/retrieve-document.html">检索文档</a></li>
                 <li class="layui-nav-item"><a href="">标签管理</a></li>
 <!--                <li class="layui-nav-item">-->
 <!--                    <a href="javascript:;">解决方案</a>-->
@@ -50,7 +50,7 @@
 
     <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe id="iframeMain" src="" style="width: 100%; height: 100%">
+        <iframe id="iframeMain" src="pages/retrieve-document.html" style="width: 100%; height: 100%">
         </iframe>
     </div>
 
@@ -59,6 +59,7 @@
         © xaykt.com - 西安长安通支付有限责任公司
     </div>
 </div>
+<script src="js/jquery-1.12.4.min.js"></script>
 <script src="layui/layui.all.js"></script>
 <script src="js/main.js"></script>
 </body>
