--- a/src/main/resources/static/pages/retrieve-document.html
+++ b/src/main/resources/static/pages/retrieve-document.html
@@ -14,11 +14,11 @@
     <div class="layui-row layui-col-space10">
         <div class="layui-col-md9">
             <div class="layui-input-block">
-                <input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入文档标题" class="layui-input">
+                <input type="text" id="title-search" name="title" lay-verify="title" autocomplete="off" placeholder="请输入文档标题" class="layui-input">
             </div>
         </div>
         <div class="layui-col-md3">
-            <button type="button" class="layui-btn">搜索</button>
+            <button type="button" id="search-btn" class="layui-btn" onclick="searchFileBox()">搜索</button>
         </div>
         <div class="layui-col-md9">
             <form class="layui-form" id="tag-form" action="">
