上传文件接口统一

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -58,6 +58,7 @@
         <!-- 底部固定区域 -->
         © xaykt.com - 西安长安通支付有限责任公司
     </div>
+    <div id="tag-value"></div>
 </div>
 <script src="js/jquery-1.12.4.min.js"></script>
 <script src="layui/layui.all.js"></script>
