重写/title/tags接口 实现多条件搜索

--- a/src/main/resources/static/pages/retrieve-document.html
+++ b/src/main/resources/static/pages/retrieve-document.html
@@ -39,7 +39,7 @@
     </div>
 </div>
 
-    <table class="layui-hide" id="file-box-table" lay-filter="file-box-table"></table>
+    <table class="layui-hide" id="file-box-table" lay-filter="file-box-table" lay-data="{id: 'file-box-table'}"></table>
 
 <div class="layui-form-item">
 
