多文件打包下载、上传文件路径修改

--- a/src/main/resources/static/pages/show-file-box.html
+++ b/src/main/resources/static/pages/show-file-box.html
@@ -27,7 +27,7 @@
             </div>
 
             <div class="layui-col-md2">
-                <button lay-submit type="button" class="layui-btn" id="upload-btn" onclick="checkFileBox();">
+                <button lay-submit type="button" class="layui-btn" id="upload-btn" onclick="downloadFileBox()">
                     <i class="layui-icon layui-icon-upload"></i>下载全部
                 </button>
             </div>
