修复文件上传序号

--- a/src/main/resources/static/pages/upload-document.html
+++ b/src/main/resources/static/pages/upload-document.html
@@ -74,7 +74,7 @@
 </div>
 <div class="layui-upload">
     <div class="layui-upload-list">
-        <table class="layui-table">
+        <table class="layui-table" id="upload-list">
             <thead>
             <tr>
                 <th>序号</th>
@@ -84,7 +84,7 @@
                 <th>操作</th>
             </tr>
             </thead>
-            <tbody id="upload-list"></tbody>
+            <tbody></tbody>
         </table>
     </div>
 </div>
