添加新建标签功能

--- a/src/main/resources/static/pages/upload-document.html
+++ b/src/main/resources/static/pages/upload-document.html
@@ -67,7 +67,7 @@
         </div>
 
         <div class="layui-col-md1">
-            <button class="layui-btn">新建</button>
+            <button class="layui-btn" onclick="createTag()">新建</button>
         </div>
 
     </div>
