设置弹出filebox的标题、描述

--- a/src/main/resources/static/pages/retrieve-document.html
+++ b/src/main/resources/static/pages/retrieve-document.html
@@ -44,6 +44,10 @@
 <div class="layui-form-item">
 
 </div>
+
+<label id="selectedTitle" hidden ></label>
+<label id="selectedDesc" hidden></label>
+
 <script src="/js/jquery-1.12.4.min.js"></script>
 <script src="/layui/layui.all.js"></script>
 <script src="/js/main.js"></script>
