--- a/src/main/resources/static/pages/show-file-box.html
+++ b/src/main/resources/static/pages/show-file-box.html
@@ -17,7 +17,7 @@
                 <label class="layui-form-label">文档标题</label>
                 <div class="layui-input-block">
                     <input type="text" id="title-input" name="title" lay-verify="required" autocomplete="off"
-                           placeholder="请输入标题" class="layui-input" disabled value="动销测试">
+                           placeholder="标题" class="layui-input" disabled value="">
                 </div>
             </div>
             <div class="layui-col-md2 layui-col-md-offset2">
@@ -39,7 +39,7 @@
                     <label class="layui-form-label">文档描述</label>
                     <div class="layui-input-block">
                         <input type="text" id="desc-input" name="title" lay-verify="required" autocomplete="off"
-                               placeholder="请输入标题" class="layui-input" disabled value="动销测试">
+                               placeholder="描述" class="layui-input" disabled value="">
                     </div>
                 </div>
             </div>
@@ -61,7 +61,6 @@
 </div>
 
 <table id="file-box-list" lay-filter="file-box-list"></table>
-
 
 <script src="/js/jquery-1.12.4.min.js"></script>
 <script src="/layui/layui.all.js"></script>
