显示文件弹窗标签，优化service代码

--- a/src/main/resources/static/pages/show-file-box.html
+++ b/src/main/resources/static/pages/show-file-box.html
@@ -51,7 +51,7 @@
             <form class="layui-form" id="tag-form" action="">
                 <div class="layui-form-item">
                     <label class="layui-form-label">标签</label>
-                    <div class="layui-input-block" id="tag-block">
+                    <div class="layui-input-block" id="tag-block-show">
 
                     </div>
                 </div>
