删除文档集、上传文件优化

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="">文档管理</a></li>
-            <li class="layui-nav-item"><a href="">用户管理</a></li>
+<!--            <li class="layui-nav-item"><a href="">用户管理</a></li>-->
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
@@ -21,8 +21,8 @@
                     root
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">基本资料</a></dd>
-                    <dd><a href="">安全设置</a></dd>
+<!--                    <dd><a href="">基本资料</a></dd>-->
+<!--                    <dd><a href="">安全设置</a></dd>-->
                 </dl>
             </li>
             <li class="layui-nav-item"><a href="">退出</a></li>
@@ -35,7 +35,7 @@
             <ul class="layui-nav layui-nav-tree"  lay-filter="pages-tree">
                 <li class="layui-nav-item"><a href="pages/retrieve-document.html" target="iframeMain">检索文档</a></li>
                 <li class="layui-nav-item"><a href="pages/upload-document.html" target="iframeMain">录入文档</a></li>
-                <li class="layui-nav-item"><a href="">标签管理</a></li>
+<!--                <li class="layui-nav-item"><a href="">标签管理</a></li>-->
 <!--                <li class="layui-nav-item">-->
 <!--                    <a href="javascript:;">解决方案</a>-->
 <!--                    <dl class="layui-nav-child">-->
