--- a/src/main/resources/static/pages/show-file-box.html
+++ b/src/main/resources/static/pages/show-file-box.html
@@ -21,8 +21,8 @@
                 </div>
             </div>
             <div class="layui-col-md2 layui-col-md-offset2">
-                <button type="button" class="layui-btn layui-btn-normal" id="choose-btn">
-                    <i class="layui-icon layui-icon-file"></i>修改文档
+                <button type="button" class="layui-btn layui-btn-danger" id="choose-btn" onclick="confirmDelete()">
+                    <i class="layui-icon layui-icon-file"></i>删除文档
                 </button>
             </div>
 
